# aeropilot

./: .gitignore  .gitmodules  CMakeLists.txt  P6-AeroPilot.md  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  pages.yml
cmake/: arm-none-eabi.cmake
docs/: design.md  metrics.md  requirements.md  verification.md
freertos/: CMakeLists.txt
freertos/port/: FreeRTOSConfig.h  mps2_m3.ld  mps2_uart.c  mps2_uart.h  startup_gcc.c  syscalls.c
groundstation/: animate.py  decode.py
scripts/: demo.sh
src/: aeropilot.c  aeropilot.h
src/app/: app.h  main.c
src/fusion/: complementary.c  complementary.h  fusion.c  fusion.h  kalman.c  kalman.h
src/proto/: arinc429.c  arinc429.h  bus.c  bus.h  crc16.c  crc16.h  frame.c  frame.h
src/sim/: rocket_sim.c  rocket_sim.h
src/state/: flight_sm.c  flight_sm.h
src/tasks/: fusion_task.c  sensor_task.c  state_machine_task.c  telemetry_task.c  watchdog_task.c
src/watchdog/: watchdog.c  watchdog.h
test/: CMakeLists.txt  test_arinc429.c  test_bus.c  test_complementary.c  test_crc16.c  test_flight_sm.c  test_frame.c  test_fusion.c  test_kalman.c  test_scenario.c  test_sim.c  test_watchdog.c
web/: app.js  index.html  style.css
web/data/: flight_fault.json  flight_nominal.json
